Tracking of dirty files

--- a/pyodide-in-browser-lib-test.html
+++ b/pyodide-in-browser-lib-test.html
@@ -32,6 +32,8 @@ Author: Yves Piguet, EPFL, 2019
                 });
                 p.load();
 
+                window.p = p;   // to make debugging easier
+
 			}, false);
         </script>
     </head>
