Option to execute code once Pyodide has been loaded

--- a/pyodide-in-browser-lib-test.html
+++ b/pyodide-in-browser-lib-test.html
@@ -18,7 +18,7 @@ Author: Yves Piguet, EPFL, 2019
     <head>
         <meta charset="utf-8"/>
         <script src="pyodide.js"></script>
-        <script src="pyodide-in-browser.js"></script>
+        <script src="pyodide-class.js"></script>
         <script>
 
 			window.addEventListener("load", () => {
