--- a/pyodide-webworker-test.html
+++ b/pyodide-webworker-test.html
@@ -21,34 +21,42 @@ Author: Yves Piguet, EPFL, 2019
 
 window.addEventListener("load", () => {
 	let elSrc = document.getElementById("src");
-	let elRun = document.getElementById("btn-run");
-	let elStop = document.getElementById("btn-stop");
-	let elClear = document.getElementById("btn-clear");
+	let btnRun = document.getElementById("btn-run");
+	let btnStop = document.getElementById("btn-stop");
+	let btnClear = document.getElementById("btn-clear");
+    let btnDirty = document.getElementById("btn-dirty");
     let elBusy = document.getElementById("busy");
 
 	let pyWorker = new PyWorker("pyodide-webworker.js");
+    let dirtyFiles = [];
 	pyWorker.timeout = 60
 	pyWorker.addCommand("alert", (msg) => { alert(msg); });
 	pyWorker.preload();
-	elRun.addEventListener("click", () => {
+	btnRun.addEventListener("click", () => {
 		let src = elSrc.value;
 		pyWorker.run(src);
-		elRun.disabled = true;
-		elStop.disabled = false;
+		btnRun.disabled = true;
+		btnStop.disabled = false;
         elBusy.style.display = "inline-block";
 	}, false);
-	elStop.addEventListener("click", () => {
+	btnStop.addEventListener("click", () => {
 		pyWorker.stop();
 		pyWorker.preload();
-		elRun.disabled = false;
+		btnRun.disabled = false;
 	}, false);
-	elClear.addEventListener("click", () => {
+	btnClear.addEventListener("click", () => {
 		pyWorker.clearOutput();
         pyWorker.clearFigure();
 	}, false);
+    btnDirty.addEventListener("click", () => {
+        pyWorker.printToOutput("\nDirty files:\n" + dirtyFiles.join("\n") + "\n");
+        dirtyFiles.forEach((path) => {
+            pyWorker.getFile(path);
+        });
+    }, false);
 	pyWorker.onTerminated = () => {
-		elStop.disabled = true;
-		elRun.disabled = false;
+		btnStop.disabled = true;
+		btnRun.disabled = false;
         elBusy.style.display = "none";
 	};
 	pyWorker.onOutput = (text) => {
@@ -56,6 +64,12 @@ window.addEventListener("load", () => {
 	};
     pyWorker.onFigure = (imageDataURL) => {
         document.getElementById("figure").src = imageDataURL;
+    };
+    pyWorker.onDirtyFile = (path) => {
+        dirtyFiles.push(path);
+    };
+    pyWorker.onFile = (path, data) => {
+        pyWorker.printToOutput("\nFile " + path + ":\n" + data + "\n");
     };
 	pyWorker.onTimeout = () => {
 		pyWorker.printToOutput("\nTimeout\n");
@@ -164,6 +178,7 @@ pp.plot([1,3,2])
 <button id="btn-run" type="button">Run</button>
 <button id="btn-stop" type="button" disabled>Stop</button>
 <button id="btn-clear" type="button">Clear</button>
+<button id="btn-dirty" type="button">Dirty</button>
 <span id="busy" class="busy" style="display: none"></span>
 </p>
 
