--- a/pyodide-in-browser-lib-test.html
+++ b/pyodide-in-browser-lib-test.html
@@ -17,25 +17,95 @@ Author: Yves Piguet, EPFL, 2019
 <html>
     <head>
         <meta charset="utf-8"/>
-        <script src="pyodide.js"></script>
+        <script src="pyodide-build-0.14.1/pyodide.js"></script>
         <script src="pyodide-class.js"></script>
         <script>
 
 			window.addEventListener("load", () => {
 
+                var btnRun = document.getElementById("btn-run");
+                var btnClear = document.getElementById("btn-clear");
+                var src = document.getElementById("src");
+                var output = document.getElementById("output");
+                var figure = document.getElementById("figure");
+
                 let p = new Pyodide({
-                    btnRunId: "btn-run",
-                    btnClearId: "btn-clear",
-                    srcId: "src",
-                    outputId: "output",
-                    figureId: "figure"
+                    ready: () => {
+                        btnRun.disabled = false;
+                        btnClear.disabled = false;
+                        busy.style.display = "none";
+                    },
+                    clearText: () => {
+                        output.textContent = "";
+                    },
+                    write: (str) => {
+                        output.textContent += str;
+                    },
+                    setFigureURL: (url) => {
+                        figure.src = url;
+                    }
                 });
                 p.load();
+
+                btnRun.addEventListener("click", () => {
+                    btnRun.disabled = true;
+                    btnClear.disabled = true;
+                    busy.style.display = "inline";
+                    p.run(src.value);
+                });
+                btnClear.addEventListener("click", () => {
+                    p.clear();
+                });
+
+                // editor tab key
+                src.addEventListener("keydown", (ev) => {
+                    if (ev.keyCode === 9) {
+                        // prevent loss of focus in textarea
+                        ev.preventDefault();
+                        ev.cancelBubbles = true;
+                        let text = src.value;
+                        let start = src.selectionStart, end = src.selectionEnd;
+                        text = text.slice(0, start) + "\t" + text.slice(end);
+                        src.value = text;
+                        src.selectionStart = src.selectionEnd = start + 1;
+                        return false;
+                    } else if ((ev.keyCode === 13 || ev.key === "Enter") && ev.shiftKey) {
+                        // run
+                        ev.preventDefault();
+                        ev.cancelBubbles = true;
+                        p.run(src.value);
+                        return false;
+                    }
+                    // normal behavior
+                    return true;
+                }, false);
+
+                p.ready();
 
                 window.p = p;   // to make debugging easier
 
 			}, false);
         </script>
+        <style>
+            .busy {
+              display: inline-block;
+              width: 0.4em;
+              height: 0.4em;
+              border-radius: 50%;
+              border: 2px solid transparent;
+              border-top: 2px solid #f00;
+              border-bottom: 2px solid #f00;
+              animation: busy-rot 2s linear infinite;
+            }
+            @keyframes busy-rot {
+              0% {
+                transform: rotate(0deg);
+              }
+              100% {
+                transform: rotate(360deg);
+              }
+            }
+        </style>
     </head>
     <body>
 
@@ -68,6 +138,7 @@ a.shape
 <p>
 <button id="btn-run" type="button" disabled>Run</button>
 <button id="btn-clear" type="button" disabled>Clear</button>
+<span id="busy" class="busy" style="display: none"></span>
 </p>
 
 <pre id="output"></pre>
