--- a/pyodide-in-browser-lib-test.html
+++ b/pyodide-in-browser-lib-test.html
@@ -28,6 +28,10 @@ Author: Yves Piguet, EPFL, 2019
                 var src = document.getElementById("src");
                 var output = document.getElementById("output");
                 var figure = document.getElementById("figure");
+                var elInput = document.getElementById("input");
+                var elInputPrompt = document.getElementById("input-prompt");
+                var fldInput = document.getElementById("input-input");
+                var btnInput = document.getElementById("input-submit");
 
                 let p = new Pyodide({
                     ready: () => {
@@ -43,7 +47,8 @@ Author: Yves Piguet, EPFL, 2019
                     },
                     setFigureURL: (url) => {
                         figure.src = url;
-                    }
+                    },
+                    handleInput: true
                 });
                 p.load();
 
@@ -52,9 +57,22 @@ Author: Yves Piguet, EPFL, 2019
                     btnClear.disabled = true;
                     busy.style.display = "inline";
                     p.run(src.value);
+                    if (p.requestInput) {
+                        elInput.style.display = "block";
+                        elInputPrompt.textContent = p.inputPrompt || "Input:";
+                    }
                 });
                 btnClear.addEventListener("click", () => {
                     p.clear();
+                });
+                btnInput.addEventListener("click", () => {
+                    let str = fldInput.value;
+                    elInput.style.display = "none";
+                    p.submitInput(str);
+                    if (p.requestInput) {
+                        elInput.style.display = "block";
+                        elInputPrompt.textContent = p.inputPrompt || "Input:";
+                    }
                 });
 
                 // editor tab key
@@ -112,18 +130,8 @@ Author: Yves Piguet, EPFL, 2019
 <h3>Test of Pyodide in the browser main thread</h3>
 
 <textarea cols="80" rows="10" id="src" autocomplete="off" autocorrect="off" autocapitalize="off" spellcheck="false">
-with open("foo.txt", "w") as f:
-	f.write("Hello, pyodide!\n")
-
-with open("foo.txt", "a") as f:
-	f.write("Bye.\n")
-
-with open("foo.txt") as f:
-	data = f.read()
-print(data)
-
-import matplotlib.pyplot as pp
-pp.plot([1,3,2])
+str = input("?")
+print(int(str) + 10)
 </textarea>
 
 <!--
@@ -139,6 +147,12 @@ a.shape
 <button id="btn-run" type="button" disabled>Run</button>
 <button id="btn-clear" type="button" disabled>Clear</button>
 <span id="busy" class="busy" style="display: none"></span>
+</p>
+
+<p id="input" style="display: none">
+<span id="input-prompt"></span>
+<input id="input-input" value="">
+<button id="input-submit">Enter</button>
 </p>
 
 <pre id="output"></pre>
