--- a/pyodide-webworker-test.html
+++ b/pyodide-webworker-test.html
@@ -64,7 +64,14 @@ window.addEventListener("load", () => {
         document.getElementById("input").style.display = "none";
     }
     btnSubmit.addEventListener("click", submit, false);
-    document.getElementById("input").addEventListener("change", submit, false);
+    document.getElementById("input").addEventListener("keydown", (ev) => {
+		if (ev.keyCode === 10 || ev.keyCode === 13) {
+            submit();
+			return false;
+		}
+		// normal behavior
+		return true;
+	}, false);
 
 	pyWorker.onTerminated = () => {
 		btnStop.disabled = true;
