Code manipulation to support input function made in ast instead of source code

--- a/pyodide-in-browser-lib-test.html
+++ b/pyodide-in-browser-lib-test.html
@@ -104,7 +104,7 @@ Author: Yves Piguet, EPFL, 2019
                     return true;
                 }, false);
 
-                p.ready();
+                postExec();
 
                 window.p = p;   // to make debugging easier
 
